example/lib/src/arbs/errors/app_it.arb
{
  "@@locale": "it",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "Si è verificato un errore",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Si è verificato un errore imprevisto",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Bug report inviato con successo.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}